refactor(domain): group Notification fields into VOs and reorganize domain by DDD building blocks